--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "normalize.css": "^6.0.0",
     "unirest": "^0.5.1"
   }
 }
